# flutter_twain_scanner

./: CHANGELOG.md  README.md  pubspec.yaml
.github/workflows/: main.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/flutter_twain_scanner/: FlutterTwainScannerPlugin.kt
android/src/test/kotlin/com/example/flutter_twain_scanner/: FlutterTwainScannerPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_twain_scanner_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_twain_scanner.podspec
ios/Classes/: FlutterTwainScannerPlugin.swift
lib/: dynamsoft_service.dart  flutter_twain_scanner.dart  flutter_twain_scanner_method_channel.dart  flutter_twain_scanner_platform_interface.dart  flutter_twain_scanner_web.dart
linux/: CMakeLists.txt  flutter_twain_scanner_plugin.cc  flutter_twain_scanner_plugin_private.h
linux/include/flutter_twain_scanner/: flutter_twain_scanner_plugin.h
linux/test/: flutter_twain_scanner_plugin_test.cc
macos/: flutter_twain_scanner.podspec
macos/Classes/: FlutterTwainScannerPlugin.swift
test/: flutter_twain_scanner_method_channel_test.dart  flutter_twain_scanner_test.dart
windows/: CMakeLists.txt  flutter_twain_scanner_plugin.cpp  flutter_twain_scanner_plugin.h  flutter_twain_scanner_plugin_c_api.cpp  twain_manager.h
windows/include/flutter_twain_scanner/: flutter_twain_scanner_plugin_c_api.h
windows/src/: DSMInterface.cpp  DSMInterface.h  TwainApp.cpp  TwainApp.h  TwainAppCMD.cpp  TwainAppCMD.h  TwainApp_ui.cpp  TwainApp_ui.h  VerifySignature.cpp  main.cpp  main.h  twain_manager.h
windows/src/common/: CTiffWriter.cpp  CTiffWriter.h  Common.h  CommonTWAIN.cpp  TwainString.cpp  TwainString.h
windows/test/: flutter_twain_scanner_plugin_test.cpp
windows/twain_64/sample2/: TWAINDS_Sample64.ds
